# NeuralNetworkBasic

./: .gitignore  .gitmodules  CMakeLists.txt
data/classification/: data.XOR.test.100.csv  data.XOR.test.1000.csv  data.XOR.test.10000.csv  data.XOR.test.500.csv  data.XOR.train.100.csv  data.XOR.train.1000.csv  data.XOR.train.10000.csv  data.XOR.train.500.csv  data.circles.test.100.csv  data.circles.test.1000.csv  data.circles.test.10000.csv  data.circles.test.500.csv  data.circles.train.100.csv  data.circles.train.1000.csv  data.circles.train.10000.csv  data.circles.train.500.csv  data.noisyXOR.test.100.csv  data.noisyXOR.test.1000.csv  data.noisyXOR.test.10000.csv  data.noisyXOR.test.500.csv  data.noisyXOR.train.100.csv  data.noisyXOR.train.1000.csv  data.noisyXOR.train.10000.csv  data.noisyXOR.train.500.csv
data/regression/: data.linear.test.10000.csv  data.linear.train.100.csv  data.linear.train.1000.csv  data.linear.train.10000.csv  data.linear.train.500.csv  data.multimodal.test.1000.csv  data.multimodal.train.100.csv  data.multimodal.train.1000.csv  data.multimodal.train.10000.csv  data.multimodal.train.500.csv  data.square.test.100.csv  data.square.train.100.csv  data.square.train.1000.csv  data.square.train.10000.csv  data.square.train.500.csv  data.xor.train.4.csv
src/: DataPoint.h  NNAliases.h  NNLayer.h  NNLossFun.h  NNMomentum.h  NNTeacher.h  NNTerminator.h  NeuralNetwork.cpp  NeuralNetwork.h  utils.cpp  utils.h
src/gui/: main.cpp
